@@ -42,7 +42,8 @@ requires:
   MARC::Convert::Wikidata::Object::People: 0
   MARC::Convert::Wikidata::Object::Publisher: 0
   MARC::Convert::Wikidata::Object::Series: 0.09
-  MARC::Leader: 0
+  MARC::Field008: 0
+  MARC::Leader: 0.05
   Mo::utils: 0.08
   Readonly: 0
   Roman: 0
