@@ -1,5 +1,6 @@
 0.29
  - Rewrite processing of covers.
+ - Rewrite processing of publication date to 008 field.
 
 0.28 2025-03-30T16:33:14+02:00
  - Add test file for field 700 testing.
